RESOLVED FIXED286493
[Screen Time Refactoring] Ensure donations do not occur in private browsing / ephemeral sessions
https://bugs.webkit.org/show_bug.cgi?id=286493
Summary [Screen Time Refactoring] Ensure donations do not occur in private browsing /...
Jessica Cheung
Reported 2025-01-24 12:43:23 PST
Attachments
Jessica Cheung
Comment 1 2025-01-24 13:19:13 PST
EWS
Comment 2 2025-01-24 15:53:45 PST
Committed 289370@main (577fb0fa5f92): <https://commits.webkit.org/289370@main> Reviewed commits have been landed. Closing PR #39515 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.