[Screen Time Refactoring] Ensure donations do not occur in private browsing / ephemeral sessions https://bugs.webkit.org/show_bug.cgi?id=286493 rdar://140439254

Reviewed by Aditya Keerthi and Wenson Hsieh.

Set suppressUsageRecording on a STWebpageController to ensure
screen time donations are not accounted during
private browsing or ephemeral sessions.

Added API tests to ensure flag is being set properly.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _installScreenTimeWebpageController]):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ScreenTime.mm:
(testSuppressUsageRecordingWithDataStore):
(TEST(ScreenTime, PersistentSession)):
(TEST(ScreenTime, NonPersistentSession)):

Canonical link: https://commits.webkit.org/289370@main